cmake_minimum_required(VERSION 3.15)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(_0003_main _0003_Longest_Substring_Without_Repeating_Characters/_0003_main.cpp)
add_executable(_0088_main _0088_Merge_Sorted_Array/_0088_main.cpp)
add_executable(_0239_main _0239_Sliding_Window_Maximum/_0239_main.cpp)
add_executable(_0239_main2 _0239_Sliding_Window_Maximum/_0239_main2.cpp)
add_executable(_0001_main _0001_Two_Sum/_0001_main.cpp)
add_executable(_0605_main _0605_Can_Place_Flowers/_0605_main.cpp)
add_executable(_0086_main _0086_Partition_List/_0086_main.cpp)
add_executable(_0002_main _0002_Add_Two_Numbers/_0002_main.cpp)
add_executable(_0509_main _0509_Fibonacci_Number/_0509_main.cpp)
add_executable(_0004_main _0004_Median_of_Two_Sorted_Arrays/_0004_main.cpp)
add_executable(_0005_main _0005_Longest_Palindromic_Substring/_0005_main.cpp)
add_executable(_0006_main _0006_ZigZag_Conversion/_0006_main.cpp)
add_executable(_0007_main _0007_Reverse_Integer/_0007_main.cpp)
add_executable(_0008_main _0008_String_to_Integer_atoi/_0008_main.cpp)
add_executable(_0009_main _0009_Palindrome_Number/_0009_main.cpp)
add_executable(_0009_main2 _0009_Palindrome_Number/_0009_main2.cpp)
add_executable(_0010_main _0010_Regular_Expression_Matching/_0010_main.cpp)
add_executable(_0830_main _0830_Positions_of_Large_Groups/_0830_main.cpp)
add_executable(Output _0000_study/_common/Output.cpp)
add_executable(_0031_main _0031_Next_Permutation/_0031_main.cpp)
add_executable(_0032_main _0032_Longest_Valid_Parentheses/_0032_main.cpp)
add_executable(_0033_main _0033_Search_in_Rotated_Sorted_Array/_0033_main.cpp)
add_executable(_0034_main _0034_Find_First_and_Last_Position_of_Element_in_Sorted_Array/_0034_main.cpp)
add_executable(_0035_main _0035_Search_Insert_Position/_0035_main.cpp)
add_executable(_0036_main _0036_Valid_Sudoku/_0036_main.cpp)
add_executable(_0037_main _0037_Sudoku_Solver/_0037_main.cpp)
add_executable(_0399_main _0399_Evaluate_Division/_0399_main.cpp)
add_executable(_0038_main _0038_Count_and_Say/_0038_main.cpp)
add_executable(_0039_main _0039_Combination_Sum/_0039_main.cpp)
add_executable(_0040_main _0040_Combination_Sum_II/_0040_main.cpp)
add_executable(_0547_main _0547_Number_of_Provinces/_0547_main.cpp)
add_executable(_0189_main _0189_Rotate_Array/_0189_main.cpp)
add_executable(_0121_main _0121_Best_Time_to_Buy_and_Sell_Stock/_0121_main.cpp)
add_executable(_0122_main _0122_Best_Time_to_Buy_and_Sell_Stock_II/_0122_main.cpp)
add_executable(_0123_main _0123_Best_Time_to_Buy_and_Sell_Stock_III/_0123_main.cpp)
add_executable(_0188_main _0188_Best_Time_to_Buy_and_Sell_Stock_IV/_0188_main.cpp)
add_executable(_0309_main _0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown/_0309_main.cpp)
add_executable(_0228_main _0228_Summary_Ranges/_0228_main.cpp)
add_executable(_1202_main _1202_Smallest_String_With_Swaps/_1202_main.cpp)
add_executable(_1203_main _1203_Sort_Items_by_Groups_Respecting_Dependencies/_1203_main.cpp)
add_executable(_684_main _0684_Redundant_Connection/_684_main.cpp)
add_executable(_1018_main _1018_Binary_Prefix_Divisible_By_5/_1018_main.cpp)
add_executable(_0947_main _0947_Most_Stones_Removed_with_Same_Row_or_Column/_0947_main.cpp)
add_executable(_0803_main _0803_Bricks_Falling_When_Hit/_0803_main.cpp)
add_executable(_1232_main _1232_Check_If_It_Is_a_Straight_Line/_1232_main.cpp)
add_executable(_0101_main _0101_Symmetric_Tree/_0101_main.cpp)
add_executable(_0102_main _0102_Binary_Tree_Level_Order_Traversal/_0102_main.cpp)
add_executable(_0103_main _0103_Binary_Tree_Zigzag_Level_Order_Traversal/_0103_main.cpp)
add_executable(_0104_main _0104_Maximum_Depth_of_Binary_Tree/_0104_main.cpp)
add_executable(_0105_main _0105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal/_0105_main.cpp)
add_executable(_0106_main _0106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal/_0106_main.cpp)
add_executable(_0107_main _0107_Binary_Tree_Level_Order_Traversal_II/_0107_main.cpp)
add_executable(_0108_main _0108_Convert_Sorted_Array_to_Binary_Search_Tree/_0108_main.cpp)
add_executable(_0109_main _0109_Convert_Sorted_List_to_Binary_Search_Tree/_0109_main.cpp)
add_executable(_0110_main _0110_Balanced_Binary_Tree/_0110_main.cpp)
add_executable(_0721_main _0721_Accounts_Merge/_0721_main.cpp)
add_executable(_1584_main _1584_Min_Cost_to_Connect_All_Points/_1584_main.cpp)
add_executable(_0628_main _0628_Maximum_Product_of_Three_Numbers/_0628_main.cpp)
add_executable(_1489_main _1489_Find_Critical_and_Pseudo_Critical_Edges_in_Minimum_Spanning_Tree/_1489_main.cpp)
add_executable(_0989_main _0989_Add_to_Array_Form_of_Integer/_0989_main.cpp)
add_executable(_0151_main _0151_Reverse_Words_in_a_String/_0151_main.cpp)
add_executable(_0152_main _0152_Maximum_Product_Subarray/_0152_main.cpp)
add_executable(_0153_main _0153_Find_Minimum_in_Rotated_Sorted_Array/_0153_main.cpp)
add_executable(_0154_main _0154_Find_Minimum_in_Rotated_Sorted_Array_II/_0154_main.cpp)